removed DS_Store file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-java/.vscode
-
+# System Files
 .DS_Store
 
-.vscode/
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
